
Release 5.2.2 (unreleased)
==========================

Bug fixes
---------

- Lagrangian Module:
  * Fix errors in deposition/reentrainment model.
  * Fix division by 0 in boundary stats.

- Lagrangian Module: fix crash in some cases with no deposition model.

- Fix missing free surface boundary movement in some cases depending on
  which pages were visited in the GUI (GitHub issue #27).

- Fix bug in automatic turbulent BCs. They were only set if not already
  initialized. Cases calling turbulent_bc_inlet_k_eps in user sources to
  overwrite GUI settings were impacted.

- Fix coherency check of slope test indicator with SIMPLE algorithm.

- Compressible: fix density time scheme in transported passive scalar/vector
  balance to ensure conservativity with compressible algorithm.

- Avoid error preventing run when checking remaining time using SLURM job array.

- Fixes for parallel runs in sedimentation source term with humid atmosphere
  model.

- Fix initialisation of some turbulence constants. Constant/Models concerned:
  * sigmae (for all RSM models)
  * csrij (EB-RSM model).

- Fix allocation of pmappers to scalar fields in atmospheric aerosols model.

- Fix allocation size for values at injection in case of mass source terms
  with coupled Reynolds stress solver.

- GUI: fix missing update of modified scalar names for groundwater flows.

- GUI: fix loss of previous deactivated wall function setting when reopened.

- trackcvg: allow saving state only when data is loaded and loading it when
  saved state is present.

- CFDStudy: allow loading studies with no MESH or POST subdirectories.

- Fix improved hydrostatic treatment and PISO-like iterations
  (nterup > 1 and iphydr = 1).

- GUI: fix crash on startup on some recent systems.

Release 5.2.1 (Sep 26 2018)
===========================

Bug fixes
---------

- Lagrangian module: fix resuspension when having internal deposition.

- Compressible model: fix inverted arguments for user velocity source terms.
